# ggen

./: .gitignore  README.adoc  pyproject.toml
examples/: json_hello.sh
src/ggen/: __main__.py
src/ggen/resources/prompt_templates/: instruct.txt  mistral-instruct.txt
src/ggrama/: __main__.py
