[tool.poetry]
name = "ggen"
version = "0.1.0"
description = ""
authors = ["Lee Braiden"]
license = "GNU Affero General Public License, version 3 only"
readme = "README.adoc"
include = [
    "src/ggen/resources/*/*",
]
packages = [
    { include="ggen", from="src" }
]

[tool.poetry.scripts]
ggen = "ggen.__main__:main"

[tool.poetry.dependencies]
python = ">=3.9"
llama-cpp-python = "^0.2.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

